massive refactoring; pep8 enhancments refs #1

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,13 @@
 tag_build = 
 tag_date = 0
 tag_svn_revision = 0
+
+[pycodestyle]
+# We exclude packages we don't maintain
+exclude = gntp,tweepy,pushjet
+ignore = E722
+statistics = True
+
+[coverage:run]
+source=apprise
+omit=*/gntp/*,*/tweepy/*,*/pushjet/*
