--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,22 @@
-[egg_info]
-tag_build = 
-tag_date = 0
-tag_svn_revision = 0
+[bdist_wheel]
+universal = 1
+
+[metadata]
+# ensure LICENSE is included in wheel metadata
+license_file = LICENSE
 
 [pycodestyle]
 # We exclude packages we don't maintain
-exclude = gntp,tweepy,pushjet
+exclude = .eggs,.tox,gntp,tweepy,pushjet
 ignore = E722
-statistics = True
+statistics = true
 
-[coverage:run]
-source=apprise
-omit=*/gntp/*,*/tweepy/*,*/pushjet/*
+[aliases]
+test=pytest
+
+[tool:pytest]
+addopts = --verbose -ra
+python_files = test/test_*.py
+filterwarnings =
+	once::Warning
+strict = true
