--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include LICENSE
 include README.md
+include README
 include requirements.txt
+include dev-requirements.txt
 recursive-include test *
 global-exclude *.pyc
 global-exclude __pycache__
