--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.md
 include README
 include requirements.txt
+include win-requirements.txt
 include dev-requirements.txt
 recursive-include test *
 global-exclude *.pyc
