Python v3.7 support; updated tweepy; refs #17

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,py36,pypy,pypy3,coverage-report
+envlist = py27,py34,py35,py36,py37,pypy,pypy3,coverage-report
 
 
 [testenv]
@@ -32,6 +32,12 @@ deps=
 commands = coverage run --parallel -m pytest {posargs}
 
 [testenv:py36]
+deps=
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+commands = coverage run --parallel -m pytest {posargs}
+
+[testenv:py37]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
