--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ license_file = LICENSE
 [pycodestyle]
 # We exclude packages we don't maintain
 exclude = .eggs,.tox,gntp,tweepy,pushjet
-ignore = E722
+ignore = E722,W503,W504
 statistics = true
 
 [aliases]
