--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,9 @@ commands = coverage run --parallel -m pytest {posargs}
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics 
+    coverage run --parallel -m pytest {posargs}
 
 [testenv:pypy]
 deps=
