--- a/tox.ini
+++ b/tox.ini
@@ -15,30 +15,35 @@ commands = python -m pytest {posargs}
 
 [testenv:py27]
 deps=
+    dbus-python
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 commands = coverage run --parallel -m pytest {posargs}
 
 [testenv:py34]
 deps=
+   dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands = coverage run --parallel -m pytest {posargs}
 
 [testenv:py35]
 deps=
+   dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands = coverage run --parallel -m pytest {posargs}
 
 [testenv:py36]
 deps=
+   dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands = coverage run --parallel -m pytest {posargs}
 
 [testenv:py37]
 deps=
+   dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
@@ -46,6 +51,12 @@ commands =
     coverage run --parallel -m pytest {posargs}
 
 [testenv:pypy]
+deps=
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+commands = coverage run --parallel -m pytest {posargs}
+
+[testenv:pypy3]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
