--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,12 @@ exclude = .eggs,.tox,gntp,tweepy,pushjet
 ignore = E722,W503,W504
 statistics = true
 
+[flake8]
+# We exclude packages we don't maintain
+exclude = .eggs,.tox,gntp,tweepy,pushjet
+ignore = E722,W503,W504
+statistics = true
+
 [aliases]
 test=pytest
 
