--- a/tox.ini
+++ b/tox.ini
@@ -10,36 +10,45 @@ setenv =
 deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
-commands = python -m pytest {posargs}
-
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:py27]
 deps=
     dbus-python
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:py34]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:py35]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:py36]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:py37]
 deps=
@@ -47,21 +56,24 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
-    flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics 
     coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:pypy]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:pypy3]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
-commands = coverage run --parallel -m pytest {posargs}
-
+commands =
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:coverage-report]
 deps = coverage
