--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include requirements.txt
 include win-requirements.txt
 include dev-requirements.txt
 recursive-include test *
+recursive-include packaging *
 global-exclude *.pyc
 global-exclude __pycache__
