--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -20,6 +21,7 @@ deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -29,6 +31,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -38,6 +41,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -47,6 +51,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -56,6 +61,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -64,6 +70,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
@@ -72,6 +79,7 @@ deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
+    python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
