--- a/setup.cfg
+++ b/setup.cfg
@@ -5,17 +5,12 @@ universal = 1
 # ensure LICENSE is included in wheel metadata
 license_file = LICENSE
 
-[pycodestyle]
-# We exclude packages we don't maintain
-exclude = .eggs,.tox,gntp,tweepy,pushjet
-ignore = E722,W503,W504
-statistics = true
-
 [flake8]
 # We exclude packages we don't maintain
 exclude = .eggs,.tox,gntp,tweepy,pushjet
 ignore = E722,W503,W504
 statistics = true
+builtins = _
 
 [aliases]
 test=pytest
@@ -26,3 +21,28 @@ python_files = test/test_*.py
 filterwarnings =
 	once::Warning
 strict = true
+
+[extract_messages]
+output-file = apprise/i18n/apprise.pot
+sort-output = true
+copyright-holder = Chris Caron
+msgid-bugs-address = lead2gold@gmail.com
+charset = utf-8
+no-location = true
+add-comments = false
+
+[compile_catalog]
+domain = apprise
+directory = apprise/i18n
+statistics = true
+use-fuzzy = true
+
+[init_catalog]
+domain = apprise
+input-file = apprise/i18n/apprise.pot
+output-dir = apprise/i18n
+
+[update_catalog]
+domain = apprise
+input-file = apprise/i18n/apprise.pot
+output-dir = apprise/i18n
