Pushjet refactored; dropped pushjet library and deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license_file = LICENSE
 
 [flake8]
 # We exclude packages we don't maintain
-exclude = .eggs,.tox,gntp,pushjet
+exclude = .eggs,.tox,gntp
 ignore = E722,W503,W504
 statistics = true
 builtins = _
