removed beerpay; refs #170

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github: caronc
-custom: ['https://www.paypal.me/lead2gold', 'https://beerpay.io/caronc/apprise']
+custom: ['https://www.paypal.me/lead2gold', ]
