Added Python 3.8 to CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,py36,py37,pypy,pypy3,coverage-report
+envlist = py27,py34,py35,py36,py37,py38,pypy,pypy3,coverage-report
 
 
 [testenv]
@@ -56,6 +56,16 @@ commands =
     flake8 . --count --show-source --statistics
 
 [testenv:py37]
+deps=
+   dbus-python
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+commands =
+    python setup.py compile_catalog
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
+
+[testenv:py38]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
