--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ license_file = LICENSE
 [flake8]
 # We exclude packages we don't maintain
 exclude = .eggs,.tox,gntp
-ignore = E722,W503,W504,W605
+ignore = E741,E722,W503,W504,W605
 statistics = true
 builtins = _
 
