--- a/.conducto/Dockerfile.el7
+++ b/.conducto/Dockerfile.el7
@@ -13,45 +13,22 @@ RUN ( \
 	rm -f /lib/systemd/system/anaconda.target.wants/*; \
    echo "assumeyes=1" >> /etc/yum.conf; \
    yum install -y epel-release; \
-   yum install -y rpm-build rpmlint python-pip python-virtualenv sudo;
-
-# Apprise Setup
-COPY . /home/builder/apprise
-WORKDIR /home/builder/apprise
+   yum install -y rpm-build rpmlint python-pip python-virtualenv sudo rsync;
 
 # RPM Build Structure Setup
 ENV FLAVOR=rpmbuild OS=centos DIST=el7
 RUN useradd builder -u 1000 -m -G users,wheel &>/dev/null && \
     echo "builder ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers && \
-    echo "# macros"                                        >  /home/builder/.rpmmacros && \
-    echo "%_topdir    /home/builder"                       >> /home/builder/.rpmmacros && \
-    echo "%_sourcedir %{_topdir}/apprise/packaging/redhat" >> /home/builder/.rpmmacros && \
-    echo "%_builddir  %{_topdir}/apprise/packaging/redhat" >> /home/builder/.rpmmacros && \
-    echo "%_specdir   %{_topdir}/apprise/packaging/redhat" >> /home/builder/.rpmmacros && \
-    echo "%_rpmdir    %{_topdir}/apprise/rpm"              >> /home/builder/.rpmmacros && \
-    echo "%_srcrpmdir %{_topdir}/apprise/rpm"              >> /home/builder/.rpmmacros && \
-    mkdir /home/builder/rpm && \
-    chmod ug+rw -R /home/builder && \
-    chown -R builder /home/builder
+    echo "# macros"                                >  /home/builder/.rpmmacros && \
+    echo "%_topdir    /home/builder"               >> /home/builder/.rpmmacros && \
+    echo "%_sourcedir %{_topdir}/packaging/redhat" >> /home/builder/.rpmmacros && \
+    echo "%_builddir  %{_topdir}/packaging/redhat" >> /home/builder/.rpmmacros && \
+    echo "%_specdir   %{_topdir}/packaging/redhat" >> /home/builder/.rpmmacros && \
+    echo "%_rpmdir    %{_topdir}/rpm"              >> /home/builder/.rpmmacros && \
+    echo "%_srcrpmdir %{_topdir}/rpm"              >> /home/builder/.rpmmacros && \
+    mkdir /home/builder/rpm
 
-# Switch to our Builder
-USER 1000
-
-# Prepare Virtual Environment
-RUN virtualenv . && . bin/activate && \
-     pip install coverage babel wheel markdown && \
-       python setup.py extract_messages && \
-       python setup.py sdist && \
-	\
-	find dist -type f -name '*.gz' \
-      -exec mv --verbose {} packaging/redhat/ \; && \
-   find packaging/man -type f -name '*.1' \
-     -exec mv --verbose {} packaging/redhat/ \; && \
-   \
-   rpmbuild -bs packaging/redhat/python-apprise.spec
-
-# Switch back
-USER 0
-
-# Install Dependencies
-RUN yum-builddep -y rpm/*.rpm
+# The ronn package isn't easily available without connecting to custom
+# repositories.  Since EL7 runs Python v2.7 (soon to be no longer supported)
+# we will emulate the ronn binary being present and not worry about it
+RUN ln -snf /usr/bin/true /usr/bin/ronn
