--- a/.conducto.cfg
+++ b/.conducto.cfg
@@ -6,8 +6,9 @@ init = pipeline.py
 [pr]
 command = python pipeline.py all_checks
 
-[push]
-command = python pipeline.py all_checks
+[push "release artifact"]
+filter = {tag} == v*
+command = python pipeline.py all_checks --tag {tag}
 
 [delete]
 command = python pipeline.py clean_if_exists --env {branch}
