--- a/.conducto.cfg
+++ b/.conducto.cfg
@@ -3,12 +3,5 @@ name = Apprise
 desc = Push Notifications that work with just about every platform!
 init = pipeline.py
 
-[pr]
+[pr common]
 command = python pipeline.py all_checks
-
-[push "release artifact"]
-filter = {tag} == v*
-command = python pipeline.py all_checks --tag {tag}
-
-[delete]
-command = python pipeline.py clean_if_exists --env {branch}
