Revert "Conducto CI Integration (Replacing Travis CI) (#367)"
This reverts commit 8bc47dc1188dcaff363701cd9a1208a4d8b23caa.

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,8 @@ source =
 [paths]
 source =
    apprise
+   .tox/*/lib/python*/site-packages/apprise
+   .tox/pypy/site-packages/apprise
 
 [report]
 show_missing = True
