Travis-CI (.org -> .com) Integration Support (#381)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ matrix:
       env: TOXENV=py37
     - python: "3.8"
       env: TOXENV=py38
-    - python: "3.9-dev"
+    - python: "3.9"
       env: TOXENV=py39
+    - python: "3.9-dev"
+      env: TOXENV=py39-dev
     - python: "pypy2.7-6.0"
       env: TOXENV=pypy
     - python: "pypy3.5-7.0"
@@ -28,7 +30,9 @@ matrix:
 
 install:
   - pip install babel
-  - pip install .
+  # upgrade tox, pip, and virtualenv so Python 3.6 will build crytography:
+  # https://travis-ci.community/t/pip-install-cryptography-fails-on-py36/11233
+  - pip install -U tox pip virtualenv
   - pip install codecov
   - pip install -r dev-requirements.txt
   - pip install -r requirements.txt
