fcm testing refactored

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ test=pytest
 [tool:pytest]
 addopts = --verbose -ra
 python_files = test/test_*.py
+norecursedirs=test/helpers
 filterwarnings =
 	once::Warning
 strict = true
