--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,py37,py38,py39,py310,py311-dev,pypy,pypy3,coverage-report
+envlist = py27,py36,py37,py38,py39,py39-dev,pypy,pypy3,bare,coverage-report
 
 
 [testenv]
@@ -20,6 +20,7 @@ deps=
     dbus-python
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
+    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -30,6 +31,7 @@ deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -40,6 +42,7 @@ deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -50,6 +53,7 @@ deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -60,14 +64,15 @@ deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
-[testenv:py310]
+
+[testenv:bare]
 deps=
-   dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
 commands =
@@ -75,11 +80,12 @@ commands =
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
-[testenv:py311-dev]
+[testenv:py39-dev]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -89,6 +95,7 @@ commands =
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
@@ -98,6 +105,7 @@ commands =
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
 # Last supported cryptography version that can link against
 # OpenSSL v1.0.2 (which pypy35 uses) is 3.1.1
 commands =
