Dropped Python 2.7 testing from Travis CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,py37,py38,py39,py39-dev,pypy,pypy3,bare,coverage-report
+envlist = py36,py37,py38,py39,py39-dev,pypy,pypy3,bare,coverage-report
 
 
 [testenv]
@@ -10,17 +10,6 @@ setenv =
 deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
-commands =
-    python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
-    flake8 . --count --show-source --statistics
-
-[testenv:py27]
-deps=
-    dbus-python
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/dev-requirements.txt
-    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
