--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,py39-dev,pypy,pypy3,bare,coverage-report
+envlist = py36,py37,py38,py39,py39-dev,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
 
 
 [testenv]
@@ -79,7 +79,7 @@ commands =
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
-[testenv:pypy]
+[testenv:pypy36]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
@@ -89,15 +89,32 @@ commands =
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
-[testenv:pypy3]
+[testenv:pypy37]
 deps=
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
-# Last supported cryptography version that can link against
-# OpenSSL v1.0.2 (which pypy35 uses) is 3.1.1
 commands =
-    pip install --upgrade cryptography==3.1.1
+    python setup.py compile_catalog
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
+
+[testenv:pypy38]
+deps=
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
+commands =
+    python setup.py compile_catalog
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
+
+[testenv:pypy39]
+deps=
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
+commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
