--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ matrix:
       env: TOXENV=py38
     - python: "3.9"
       env: TOXENV=py39
-    - python: "3.9-dev"
-      env: TOXENV=py39-dev
+    - python: "3.10"
+      env: TOXENV=py310
     # PyPy Environments
     - python: "pypy3.6-7.3.3"
       env: TOXENV=pypy36
