--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,py39-dev,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
+envlist = py36,py37,py38,py39,py310,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
 
 
 [testenv]
@@ -58,22 +58,22 @@ commands =
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
-
-[testenv:bare]
-deps=
-   -r{toxinidir}/requirements.txt
-   -r{toxinidir}/dev-requirements.txt
-commands =
-    python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
-    flake8 . --count --show-source --statistics
-
-[testenv:py39-dev]
+[testenv:py310]
 deps=
    dbus-python
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
+commands =
+    python setup.py compile_catalog
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
+
+
+[testenv:bare]
+deps=
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
 commands =
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
