--- a/tox.ini
+++ b/tox.ini
@@ -85,6 +85,7 @@ deps=
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
+    pip install "cryptography<3.4"
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
@@ -95,6 +96,7 @@ deps=
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
+    pip install "cryptography<3.4"
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
 
@@ -104,6 +106,7 @@ deps=
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
+    pip install "cryptography<3.4"
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
@@ -114,6 +117,7 @@ deps=
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
+    pip install "cryptography<3.4"
     python setup.py compile_catalog
     coverage run --parallel -m pytest {posargs}
     flake8 . --count --show-source --statistics
