CI: Also install `cryptography<3.4` within tox environment
Otherwise, the process will try to install the most recent version,
which will need a Rust toolchain. cryptography 3.3 is the last one which
does not.

--- a/tox.ini
+++ b/tox.ini
@@ -81,6 +81,8 @@ commands =
 
 [testenv:pypy36]
 deps=
+   # cryptography 3.3 is the last one not needing a Rust toolchain.
+   cryptography<3.4
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
@@ -91,6 +93,8 @@ commands =
 
 [testenv:pypy37]
 deps=
+   # cryptography 3.3 is the last one not needing a Rust toolchain.
+   cryptography<3.4
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
@@ -100,6 +104,8 @@ commands =
 
 [testenv:pypy38]
 deps=
+   # cryptography 3.3 is the last one not needing a Rust toolchain.
+   cryptography<3.4
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
@@ -110,6 +116,8 @@ commands =
 
 [testenv:pypy39]
 deps=
+   # cryptography 3.3 is the last one not needing a Rust toolchain.
+   cryptography<3.4
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/dev-requirements.txt
    -r{toxinidir}/all-plugin-requirements.txt
