--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,py310,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
+envlist = py36,py37,py38,py39,py310,py311,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
 
 
 [testenv]
@@ -69,6 +69,16 @@ commands =
     coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
+[testenv:py311]
+deps=
+   dbus-python
+   -r{toxinidir}/requirements.txt
+   -r{toxinidir}/dev-requirements.txt
+   -r{toxinidir}/all-plugin-requirements.txt
+commands =
+    python setup.py compile_catalog
+    coverage run --parallel -m pytest {posargs}
+    flake8 . --count --show-source --statistics
 
 [testenv:bare]
 deps=
