--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps=
     -r{toxinidir}/dev-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:py36]
@@ -23,7 +23,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:py37]
@@ -34,7 +34,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
 
 [testenv:py38]
 deps=
@@ -44,7 +44,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:py39]
@@ -55,7 +55,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:py310]
@@ -66,7 +66,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 
@@ -76,7 +76,7 @@ deps=
    -r{toxinidir}/dev-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:pypy36]
@@ -88,7 +88,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:pypy37]
@@ -100,7 +100,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
 
 [testenv:pypy38]
 deps=
@@ -111,7 +111,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:pypy39]
@@ -123,7 +123,7 @@ deps=
    -r{toxinidir}/all-plugin-requirements.txt
 commands =
     python setup.py compile_catalog
-    coverage run --parallel -m pytest {posargs}
+    coverage run -m pytest {posargs}
     flake8 . --count --show-source --statistics
 
 [testenv:coverage-report]
