CI: Save resources by disabling builds on PyPy 3.7 and PyPy 3.8
Adding all variants bumped the spent build minutes on CI from ~25 to
~45 minutes. PyPy builds take 5-7 minutes, so it is a reasonable share
when omitting two of them. We still keep PyPy 3.6 and PyPy 3.9 for now.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39,py310,pypy36,pypy37,pypy38,pypy39,bare,coverage-report
+envlist = py36,py37,py38,py39,py310,pypy36,pypy39,bare,coverage-report
 
 
 [testenv]
