Speed up test suite by invoking tests in parallel, using `pytest-xdist` (#690)

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,7 @@
 [run]
-disable_warnings = no-data-collected
+data_file = .coverage-reports/.coverage
 branch = True
+parallel = True
 source =
     apprise
 
