CI: Always use Bash, also on Windows

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,10 @@ jobs:
             python-version: "3.10"
             bare: true
 
+    defaults:
+      run:
+        shell: bash
+
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
