CI: Do not install `pywin32` on PyPy
ERROR: Could not find a version that satisfies the requirement pywin32 (from versions: none)
ERROR: No matching distribution found for pywin32

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -98,7 +98,7 @@ jobs:
     - name: Install project dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
-        pip install -r win-requirements.txt
+        [[ $PYTHON != 'pypy'* ]] && pip install -r win-requirements.txt || true
 
     # Install package in editable mode,
     # and run project-specific tasks.
