CI/CodeQL: Cancel in-progress jobs when pushing to the same branch
This will save resources when pushing to the same PR branch multiple
times in (quick) succession. Mostly, there is no need to finish the
workflow jobs which are currently running.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -8,6 +8,11 @@ on:
   schedule:
     - cron: '42 15 * * 5'
 
+# Cancel in-progress jobs when pushing to the same branch.
+concurrency:
+  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   analyze:
     name: Analyze
