CI: Explicitly configure CODECOV_TOKEN to mitigate intermittent failures
Reference: https://github.com/caronc/apprise/issues/715

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,7 @@ jobs:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
       BARE: ${{ matrix.bare }}
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }} (bare=${{ matrix.bare }})
     steps:
