RPM Package Compatibility Fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ builtins = _
 test=pytest
 
 [tool:pytest]
-addopts = --verbosity=3 -ra
+addopts = -ra
 python_files = test/test_*.py
 norecursedirs=test/helpers
 filterwarnings =
