--- a/Dockerfile.el9
+++ b/Dockerfile.el9
@@ -1,5 +1,5 @@
 # Base
-FROM rockylinux:8
+FROM rockylinux:9
 ENV container docker
 RUN ( \
 	cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
@@ -13,10 +13,10 @@ RUN ( \
 	rm -f /lib/systemd/system/anaconda.target.wants/*; \
    echo "assumeyes=1" >> /etc/yum.conf; \
    dnf install -y epel-release; \
-   dnf install -y rpm-build rpmlint python3-pip python3-virtualenv rubygem-ronn \
+   dnf install -y rpm-build rpmlint python3-pip rubygem-ronn \
                   dnf-plugins-core 'dnf-command(config-manager)' \
                  'dnf-command(builddep)' sudo rsync rpmdevtools; \
-   dnf config-manager --set-enabled powertools;
+   dnf config-manager --set-enabled crb;
 
 COPY packaging/redhat/python-apprise.spec /
 # Place our build file into the path
