--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,8 +49,10 @@ jobs:
             python-version: "3.10"
 
           # Test more available versions of CPython on Linux.
-          - os: "ubuntu-latest"
-            python-version: "3.6"
+          - os: "ubuntu-20.04"
+            # v3.6 (exclusively referenced) is not supported by GitHub anymore)
+            # v3.6.8 is fixed since it is the version CentOS/Rocky/RedHat v8 uses
+            python-version: "3.6.8"
           - os: "ubuntu-latest"
             python-version: "3.7"
           - os: "ubuntu-latest"
