Inconsistent Notification Plugin Information Cleanup (#889)

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ sdist/
 .installed.cfg
 *.egg
 
+# Generated from Docker Instance
+.bash_history
+.python_history
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
