--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,11 @@ universal = 0
 
 [metadata]
 # ensure LICENSE is included in wheel metadata
-license_file = LICENSE
+license_files = LICENSE
 
 [flake8]
 # We exclude packages we don't maintain
-exclude = .eggs,.tox
+exclude = .eggs,.tox,.local
 ignore = E741,E722,W503,W504,W605
 statistics = true
 builtins = _
