--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ license_files = LICENSE
 
 [flake8]
 # We exclude packages we don't maintain
-exclude = .eggs,.tox,.local
+exclude = .eggs,.tox,.local,dist
 ignore = E741,E722,W503,W504,W605
 statistics = true
 builtins = _
@@ -18,7 +18,7 @@ test=pytest
 [tool:pytest]
 addopts = -ra
 python_files = test/test_*.py
-norecursedirs=test/helpers
+norecursedirs=test/helpers, dist
 filterwarnings =
 	once::Warning
 
