Dropped Python v3.6 (and EPEL8) support

--- a/Dockerfile.el9
+++ b/Dockerfile.el9
@@ -29,9 +29,7 @@
 # Base
 FROM rockylinux:9
 ENV container docker
-RUN ( \
-	cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
-	systemd-tmpfiles-setup.service ] || rm -f $i; done); \
+RUN \
 	rm -f /lib/systemd/system/multi-user.target.wants/*;\
 	rm -f /etc/systemd/system/*.wants/*;\
 	rm -f /lib/systemd/system/local-fs.target.wants/*; \
