!1146: Add E203 to a list of ignored rules, because of its non-alignment with PEP8

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ license_files = LICENSE
 [flake8]
 # We exclude packages we don't maintain
 exclude = .eggs,.tox,.local,dist
-ignore = E741,E722,W503,W504,W605
+ignore = E741,E722,W503,W504,W605,E203
 statistics = true
 builtins = _
 
