debugging matrix tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,58 @@
 version: "3.3"
 services:
+  test.py39:
+    build:
+      context: .
+      dockerfile: test/docker/Dockerfile.py39
+    volumes:
+      - ./:/apprise
+
   test.py310:
     build:
       context: .
-      dockerfile: Dockerfile.py310
+      dockerfile: test/docker/Dockerfile.py310
     volumes:
       - ./:/apprise
 
   test.py311:
     build:
       context: .
-      dockerfile: Dockerfile.py311
+      dockerfile: test/docker/Dockerfile.py311
     volumes:
       - ./:/apprise
 
   test.py312:
     build:
       context: .
-      dockerfile: Dockerfile.py312
-    volumes:
-      - ./:/apprise
-
-  rpmbuild.el8:
-    build:
-      context: .
-      dockerfile: Dockerfile.el8
+      dockerfile: test/docker/Dockerfile.py312
     volumes:
       - ./:/apprise
 
   rpmbuild.el9:
     build:
       context: .
-      dockerfile: Dockerfile.el9
+      dockerfile: test/docker/Dockerfile.el9
     volumes:
       - ./:/apprise
 
   rpmbuild.f37:
     build:
       context: .
-      dockerfile: Dockerfile.f37
+      dockerfile: test/docker/Dockerfile.f37
     volumes:
       - ./:/apprise
 
   rpmbuild.f39:
     build:
       context: .
-      dockerfile: Dockerfile.f39
+      dockerfile: test/docker/Dockerfile.f39
     volumes:
       - ./:/apprise
 
   rpmbuild.rawhide:
     build:
       context: .
-      dockerfile: Dockerfile.rawhide
+      dockerfile: test/docker/Dockerfile.rawhide
     volumes:
       - ./:/apprise
 
