improved test coverage

--- a/tox.ini
+++ b/tox.ini
@@ -97,7 +97,7 @@ commands =
     find . -type f -name "*.pyc" -delete
     find . -type f -name "*.pyo" -delete
     find . -type d -name "__pycache__" -delete
-    rm -rf BUILD SOURCES SRPMS BUILDROOT .ruff_cache .coverage-reports .coverage coverage.xml dist build apprise.egg-info .mypy_cache .pytest_cache
+    rm -rf BUILD SOURCES SRPMS BUILDROOT .cache .ruff_cache .coverage-reports .coverage coverage.xml dist build apprise.egg-info .mypy_cache .pytest_cache
 
 [testenv:i18n]
 description = Extract and update .pot/.po files for translation
