minor fixes lingering from #1368

--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,13 @@ commands =
     coverage run --source=apprise -m pytest tests {posargs}
     coverage report
 
+[testenv:test]
+description = Run simplified tests without coverage
+extras = dev,all-plugins
+commands =
+    pip install --no-cache-dir -e ".[dev,all-plugins]"
+    pytest --tb=short -q {posargs}
+
 [testenv:clean]
 description = Remove build artifacts and cache files
 skip_install = true
@@ -96,6 +103,7 @@ allowlist_externals =
 commands =
     find . -type f -name "*.pyc" -delete
     find . -type f -name "*.pyo" -delete
+    find . -type f -name "*.orig" -delete
     find . -type d -name "__pycache__" -delete
     rm -rf BUILD SOURCES SRPMS BUILDROOT .cache .ruff_cache .coverage-reports .coverage coverage.xml dist build apprise.egg-info .mypy_cache .pytest_cache
 
